--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/helmet": "0.0.44",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/mongoose": "^5.5.17",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.4",
     "@types/pino": "^5.8.10",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
@@ -32,10 +34,14 @@
     "typescript": "^3.6.2"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.10.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "morgan": "^1.9.1",
     "pino": "^5.13.2"
